--- a/Hello-SelfHost-WebAPI/Hello-SelfHost-WebAPI.csproj
+++ b/Hello-SelfHost-WebAPI/Hello-SelfHost-WebAPI.csproj
@@ -51,6 +51,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -85,6 +88,7 @@
   <ItemGroup>
     <Compile Include="Attributes\BasicHttpAuthorizeAttribute.cs" />
     <Compile Include="Attributes\MembershipHttpAuthorizeAttribute.cs" />
+    <Compile Include="BasicTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Start\Startup.cs" />
